# All_in_AI

./: .gitignore  CLAUDE.md  README.md  docker-compose.dev.yml  docker-compose.yml  start_all.py
.claude/: settings.local.json
agents/: __init__.py  aegra.json  basic_agent.py  pyproject.toml
agents/core/: agent.py
agents/memory/: MEMORY.md  USER.md  file_provider.py  profile.md
agents/src/agents/: basic_agent.py
agents/src/agents/memory/: memory_manager.py  provider.py
agents/src/agents/prompt/: system_prompt.txt
agents/src/agents/tools/: memory.py
agents/tools/: __init__.py  search_web.py
backend/: .env  Dockerfile.backend  aegra.json  docker-compose.yml  pyproject.toml  start_aegra.py  start_aegra_v2.py  test_eventloop.py  test_memory_file_provider.py  test_memory_security.py  test_skill_activation.py  test_skills_api.py
backend/agents/: __init__.py  aegra.json  basic_agent.py
backend/gateway/: .env.example  __init__.py  api_client.py  config.py  runner.py  session.py
backend/libs/aegra-api/src/aegra_api/: main.py
backend/libs/aegra-api/src/aegra_api/api/: skills.py
backend/memory/: MEMORY.md  USER.md  file_provider.py  memory_manager.py  provider.py
backend/scripts/: init.sh
backend/test/: test_memory_integration.py  test_memory_manager.py  test_memory_tool.py
docs/superpowers/plans/: 2026-04-12-agent-chat-platform-plan.md  2026-04-13-all-in-ai-interactive-agent.md  2026-04-13-memory-system-impl.md  2026-04-13-slash-skills-impl.md  2026-04-14-memory-store-merge.md  (+3 more)
frontend/: Dockerfile.frontend  package-lock.json
(+5 files in other folders)
