[project]
name = "agents"
version = "0.1.0"
description = "All-in-AI Agent package"
requires-python = ">=3.12"
dependencies = [
    "deepagents>=0.4.0",
    "langchain-anthropic",
    "langchain-openai",
    "langchain-core",
    "pydantic",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/agents"]
